# System-of-equations-solver

./: .gitignore  DesignDoc.md  LICENSE  PyProject.toml  README.md  classifier.py  main.py  parser.py  pyproject.toml  requirments.txt  solver.py
.github/workflows/: tests.yml
design/: DesignDoc.md
tests/: test_classifier.py  test_parser.py  test_solver.py
tests/fixtures/: decimals.txt  infinite_solutions.txt  mixed.txt  multi_edge_cases.txt  no_solution.txt  overdetermined.txt  parser_edge_cases.txt  simple.txt  two_systems.txt
