[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linear-solver"
version = "0.1.0"
description = "A command-line tool for solving systems of linear equations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["numpy>=2.0"]

[project.scripts]
linear-solver = "main:run"

[tool.setuptools]
py-modules = ["main", "parser", "solver", "classifier"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]